--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Activity.New.VideoActivity">
 
-    <cn.jzvd.JzvdStd
+    <cn.jzvd.JZVideoPlayerStandard
         android:id="@+id/jz_video"
         android:layout_width="match_parent"
         android:layout_height="0dp"
