--- a/app/src/main/res/layout/alert_progress_dialog.xml
+++ b/app/src/main/res/layout/alert_progress_dialog.xml
@@ -38,9 +38,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/behdad"
+        android:fontFamily="@font/iransans"
         android:text="در حال ارسال"
         android:textAlignment="center"
+        android:textColor="@color/grey_700"
         android:textDirection="rtl"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
@@ -69,11 +70,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/behdad"
+        android:fontFamily="@font/iransans"
         android:text="0%"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/grey_700"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/background_full_corned"
+        android:fontFamily="@font/iransansmedium"
+        android:gravity="center"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="لغو ارسال"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/speed" />
+
+    <TextView
+        android:id="@+id/speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/iransansmedium"
+        android:textColor="@color/grey_700"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/size"
+        app:layout_constraintTop_toBottomOf="@+id/size" />
+
+    <TextView
+        android:id="@+id/size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/iransansmedium"
+        android:textColor="@color/grey_700"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/progressBar"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
 
