--- a/app/src/main/res/layout/app_bar_list.xml
+++ b/app/src/main/res/layout/app_bar_list.xml
@@ -62,13 +62,6 @@
             app:layout_constraintVertical_bias="0.0"
             tools:visibility="gone">
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:visibility="visible"
-                app:srcCompat="@mipmap/back"
-                tools:visibility="visible" />
         </LinearLayout>
 
         <TextView
@@ -77,7 +70,6 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
 
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/dimafred"
@@ -89,10 +81,20 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/logo" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
