--- a/app/src/main/res/drawable/background_button_message_white.xml
+++ b/app/src/main/res/drawable/background_button_message_white.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
 
-            <solid android:color="#F4EFEF" />
+            <solid android:color="#ffffff" />
 
             <corners android:radius="15dp" />
 
