--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -33,7 +33,8 @@
                 android:id="@+id/scrollView2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/include2"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintBottom_toBottomOf="@+id/include2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -41,7 +42,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/linearLayout"
@@ -56,9 +57,7 @@
                             android:id="@+id/constraintLayout4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="24dp"
                             android:layout_marginTop="80dp"
-                            android:layout_marginEnd="24dp"
                             android:background="@drawable/background_button_gradiunt_blue"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -67,9 +66,45 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginBottom="8dp"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toTopOf="@+id/linearLayout7">
+
+                                <TextView
+                                    android:id="@+id/textView8"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="16dp"
+                                    android:fontFamily="@font/lalehzar"
+                                    android:text="دسته ها"
+                                    android:textColor="@color/white"
+                                    android:textSize="18sp" />
+
+                                <View
+                                    android:id="@+id/view2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="1dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="5dp"
+                                    android:layout_marginEnd="16dp"
+                                    android:layout_weight="1"
+                                    android:alpha="0.5"
+                                    android:background="@color/white"
+                                    android:visibility="visible"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/linearLayout7"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                android:layout_marginTop="80dp"
+                                android:layout_marginTop="130dp"
                                 android:layout_marginEnd="16dp"
                                 android:layout_marginBottom="16dp"
                                 android:background="@drawable/background_button_message_white"
@@ -85,6 +120,7 @@
                                     android:orientation="horizontal">
 
                                     <LinearLayout
+                                        android:id="@+id/btn1"
                                         android:layout_width="0dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="5dp"
@@ -119,8 +155,8 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="5dp"
-                                            android:fontFamily="@font/iransansmedium"
-                                            android:text="منو1"
+                                            android:fontFamily="@font/iranyekanmedium"
+                                            android:text="فیزیک"
                                             android:textAlignment="center"
                                             android:textColor="@color/blue_2"
                                             android:textSize="10sp"
@@ -162,8 +198,8 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="5dp"
-                                            android:fontFamily="@font/iransansmedium"
-                                            android:text="منو1"
+                                            android:fontFamily="@font/iranyekanmedium"
+                                            android:text="زیست"
                                             android:textAlignment="center"
                                             android:textColor="@color/blue_2"
                                             android:textSize="10sp"
@@ -205,8 +241,8 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="5dp"
-                                            android:fontFamily="@font/iransansmedium"
-                                            android:text="منو1"
+                                            android:fontFamily="@font/iranyekanmedium"
+                                            android:text="ریاضی"
                                             android:textAlignment="center"
                                             android:textColor="@color/blue_2"
                                             android:textSize="10sp"
@@ -247,8 +283,8 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="5dp"
-                                            android:fontFamily="@font/iransansmedium"
-                                            android:text="منو1"
+                                            android:fontFamily="@font/iranyekanmedium"
+                                            android:text="شیمی"
                                             android:textAlignment="center"
                                             android:textColor="@color/blue_2"
                                             android:textSize="10sp"
@@ -261,26 +297,81 @@
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="0dp"
-                            android:layout_height="120dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginEnd="16dp"
-                            android:background="@drawable/background_button_message_white"
+                            android:layout_height="wrap_content"
                             app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                             app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
                             app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
-                            app:layout_constraintTop_toTopOf="@+id/constraintLayout4">
+                            app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
+                            app:layout_constraintVertical_bias="0.42000002">
 
                             <ImageView
                                 android:id="@+id/imageView20"
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
+                                android:layout_height="170dp"
                                 android:scaleType="centerCrop"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@mipmap/banner_1" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp">
+
+                        <ImageView
+                            android:id="@+id/imageView16"
+                            android:layout_width="0dp"
+                            android:layout_height="140dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@mipmap/banner_2" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp">
+
+                        <ImageView
+                            android:id="@+id/imageView16"
+                            android:layout_width="0dp"
+                            android:layout_height="110dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@mipmap/notif_1" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="30dp">
+
+                        <ImageView
+                            android:id="@+id/imageView16"
+                            android:layout_width="0dp"
+                            android:layout_height="210dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@mipmap/links" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
@@ -300,7 +391,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <View
-                    android:id="@+id/view5"
+                    android:id="@+id/view50"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@drawable/gradient"
@@ -315,8 +406,6 @@
                 layout="@layout/bottom_navigation3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
