--- a/app/src/main/res/layout/activity_show_post.xml
+++ b/app/src/main/res/layout/activity_show_post.xml
@@ -20,6 +20,22 @@
             android:layout_height="match_parent">
 
 
+            <ProgressBar
+                android:id="@+id/progressBarRow3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:indeterminateDrawable="@drawable/progress_bar_states"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/include2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/toolbar"
+                app:layout_constraintVertical_bias="0.555" />
+
             <include
                 android:id="@+id/toolbar"
 
@@ -53,18 +69,17 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/imageView15"
+                            android:id="@+id/icon"
                             android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            app:srcCompat="@mipmap/icon_post" />
+                            android:layout_height="40dp" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/titleTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="5dp"
-                            android:fontFamily="@font/casablanca"
+                            android:fontFamily="@font/lalehzar"
                             android:text="نمایش پست"
                             android:textColor="@color/blue_900"
                             android:textSize="18sp" />
@@ -138,7 +153,7 @@
                                 android:id="@+id/textView8"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/casablanca"
+                                android:fontFamily="@font/lalehzar"
                                 android:text="تمرین ها"
                                 android:textColor="@color/blue_900"
                                 android:textSize="14sp" />
@@ -195,7 +210,7 @@
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginStart="5dp"
                                 android:layout_weight="1"
-                                android:fontFamily="@font/iransansmedium"
+                                android:fontFamily="@font/iranyekanmedium"
                                 android:text="بازدید:  45648"
                                 android:textColor="@color/blue_900"
                                 android:textSize="10sp" />
@@ -220,7 +235,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
                                 android:layout_marginStart="5dp"
-                                android:fontFamily="@font/iransansmedium"
+                                android:fontFamily="@font/iranyekanmedium"
                                 android:text="نظر: 50"
                                 android:textAlignment="viewEnd"
                                 android:textColor="@color/blue_900"
@@ -275,7 +290,7 @@
                 android:layout_height="3dp"
                 android:layout_marginTop="55dp"
                 android:background="@drawable/gradient_small"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
