--- a/app/src/main/res/layout/alert_progress_dialog.xml
+++ b/app/src/main/res/layout/alert_progress_dialog.xml
@@ -38,7 +38,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/iransans"
+        android:fontFamily="@font/iranyekan"
         android:text="در حال ارسال"
         android:textAlignment="center"
         android:textColor="@color/grey_700"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/iransans"
+        android:fontFamily="@font/iranyekan"
         android:text="0%"
         android:textColor="@color/grey_700"
         android:textSize="12sp"
@@ -84,7 +84,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/background_full_corned"
-        android:fontFamily="@font/iransansmedium"
+        android:fontFamily="@font/iranyekanmedium"
         android:gravity="center"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/iransansmedium"
+        android:fontFamily="@font/iranyekanmedium"
         android:textColor="@color/grey_700"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/size"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/iransansmedium"
+        android:fontFamily="@font/iranyekanmedium"
         android:textColor="@color/grey_700"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/progressBar"
