--- a/app/src/main/res/layout/alert_warning_update.xml
+++ b/app/src/main/res/layout/alert_warning_update.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/iransans"
+        android:fontFamily="@font/iranyekan"
         android:text="پیغام"
         android:textColor="@color/blue_grey_800"
         android:textDirection="rtl"
