--- a/app/src/main/res/layout/app_bar_list.xml
+++ b/app/src/main/res/layout/app_bar_list.xml
@@ -72,7 +72,7 @@
             android:layout_marginStart="8dp"
 
             android:layout_marginEnd="8dp"
-            android:fontFamily="@font/dimafred"
+            android:fontFamily="@font/lalehzar"
             android:gravity="center_vertical"
             android:singleLine="true"
             android:text="دبیرستان علامه جعفری"
