--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -60,7 +60,7 @@
                         android:layout_gravity="right|end|top"
                         android:layout_marginEnd="4dp"
                         android:background="@drawable/item_count"
-                        android:fontFamily="@font/iransansmedium"
+                        android:fontFamily="@font/iranyekanmedium"
                         android:gravity="center"
                         android:maxHeight="20dp"
                         android:minWidth="20dp"
@@ -102,7 +102,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="5dp"
-                            android:fontFamily="@font/iransansmedium"
+                            android:fontFamily="@font/iranyekanmedium"
                             android:gravity="center"
                             android:text="پروفایل"
                             android:textColor="@color/white"
@@ -122,7 +122,7 @@
                         android:layout_gravity="right|end|top"
                         android:layout_marginEnd="4dp"
                         android:background="@drawable/item_count"
-                        android:fontFamily="@font/iransansmedium"
+                        android:fontFamily="@font/iranyekanmedium"
                         android:gravity="center"
                         android:maxHeight="20dp"
                         android:minWidth="20dp"
@@ -163,7 +163,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="5dp"
-                            android:fontFamily="@font/iransansmedium"
+                            android:fontFamily="@font/iranyekanmedium"
                             android:gravity="center"
                             android:text="پشتیبانی"
                             android:textColor="@color/white"
@@ -193,7 +193,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_margin="5dp"
-                        android:fontFamily="@font/iransansmedium"
+                        android:fontFamily="@font/iranyekanmedium"
                         android:gravity="center"
                         android:text="صفحه نخست"
                         android:textColor="@color/white"
@@ -212,7 +212,7 @@
                         android:layout_gravity="right|end|top"
                         android:layout_marginEnd="4dp"
                         android:background="@drawable/item_count"
-                        android:fontFamily="@font/iransansmedium"
+                        android:fontFamily="@font/iranyekanmedium"
                         android:gravity="center"
                         android:maxHeight="20dp"
                         android:minWidth="20dp"
@@ -255,7 +255,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="5dp"
-                            android:fontFamily="@font/iransansmedium"
+                            android:fontFamily="@font/iranyekanmedium"
                             android:gravity="center"
                             android:text="کلیه پست ها"
                             android:textColor="@color/white"
@@ -275,7 +275,7 @@
                         android:layout_gravity="right|end|top"
                         android:layout_marginEnd="4dp"
                         android:background="@drawable/item_count"
-                        android:fontFamily="@font/iransansmedium"
+                        android:fontFamily="@font/iranyekanmedium"
                         android:gravity="center"
                         android:maxHeight="20dp"
                         android:minWidth="20dp"
@@ -317,7 +317,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="5dp"
-                            android:fontFamily="@font/iransansmedium"
+                            android:fontFamily="@font/iranyekanmedium"
                             android:gravity="center"
                             android:text="علاقه مندی"
                             android:textColor="@color/white"
