--- a/app/src/main/res/layout/viewholder_dropdown.xml
+++ b/app/src/main/res/layout/viewholder_dropdown.xml
@@ -4,9 +4,9 @@
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:background="@drawable/background_insert_ads">
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
+    android:background="@drawable/background_item_orange_border">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,22 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/iranyekanmedium"
-            android:gravity="center_vertical"
-            android:paddingStart="10dp"
-            android:text="گزینه 1"
-            android:textAlignment="viewStart"
-            android:textColor="@color/blue_900"
-            android:textDirection="ltr"
-            android:textSize="14sp" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/icon_background"
             android:layout_width="wrap_content"
@@ -42,14 +26,28 @@
                 android:id="@+id/icon"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/unmark" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:fontFamily="@font/iranyekanmedium"
+            android:gravity="center_vertical"
+            android:paddingStart="5dp"
+            android:text="گزینه 1"
+            android:textColor="@color/blue_900"
+            android:textDirection="rtl"
+            android:textSize="12sp" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
