--- a/app/src/main/res/layout/viewholder_video_play.xml
+++ b/app/src/main/res/layout/viewholder_video_play.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/iransansmedium"
+                android:fontFamily="@font/iranyekanmedium"
                 android:gravity="center_vertical"
                 android:lines="2"
                 android:paddingStart="10dp"
@@ -55,7 +55,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
-                    android:fontFamily="@font/iransansmedium"
+                    android:fontFamily="@font/iranyekanmedium"
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="گزینه 1"
@@ -70,7 +70,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
-                    android:fontFamily="@font/iransansmedium"
+                    android:fontFamily="@font/iranyekanmedium"
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
@@ -132,7 +132,7 @@
                         android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:fontFamily="@font/iransansmedium"
+                        android:fontFamily="@font/iranyekanmedium"
                         android:text="TextView"
                         android:textAlignment="center"
                         android:textColor="@color/white"
