--- a/app/src/main/res/drawable/background_half_tranparent_black.xml
+++ b/app/src/main/res/drawable/background_half_tranparent_black.xml
@@ -4,11 +4,11 @@
     <item>
         <shape android:shape="rectangle">
 
-            <solid android:color="#54000000" />
+            <solid android:color="#1BFFFFFF" />
 
-            <corners android:radius="15dp" />
+            <corners android:radius="50dp" />
 
-            <!--<stroke android:width="1dp" android:color="@color/stroke_item_horizontal" />-->
+            <stroke android:width="1dp" android:color="#65FAF8F8" />
 
         </shape>
 
