--- a/app/src/main/res/layout/viewholder_post_list.xml
+++ b/app/src/main/res/layout/viewholder_post_list.xml
@@ -57,6 +57,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/editBtn"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
@@ -86,6 +87,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/deleteBtn"
                 android:layout_width="100dp"
                 android:layout_height="35dp"
                 android:layout_margin="10dp"
